<resources>
    <string name="app_name">Buscador ML</string>

    <!-- common -->
    <string name="no_internet">¡Parece que no hay internet! Revisa tu conexión</string>
    <string name="unknown_error">Parece que algo salió mal. Vuelve a intentarlo en un momento.</string>

    <!-- home -->
    <string name="title_home">Buscador ML</string>
    <string name="search">¿Qué estás buscando?</string>
    <string name="last_viewed">Vistos recientemente:</string>
    <string name="start_searching">Busca algún producto para empezar.</string>

    <!-- products -->
    <string name="title_products">Resultados</string>
    <string name="no_result_found">No encontramos ese preducto, pero tenemos muchos más. Intenta con otra búsqueda.</string>
    <string name="results_count">"%s coincidencias"</string>

    <!-- detail -->
    <string name="title_detail">Detalles</string>
    <string name="retry">Reintentar</string>
    <string name="place_format">%s, %s</string>

</resources>